Fixes bug where footer could overlap message on small screens

--- a/_sass/modules/_hero.scss
+++ b/_sass/modules/_hero.scss
@@ -9,7 +9,9 @@
   }
 
   footer {
-    position: fixed;
+    @media (min-height: 800px) {
+      position: fixed;
+    }
     bottom: 50px;
     margin-left: auto;
     margin-right: auto;
